--- a/exercises/templates/index.html
+++ b/exercises/templates/index.html
@@ -1,1 +1,12 @@
-<!-- Put the HTML template for your page here! -->
+<!DOCTYPE html>
+<html>
+<head>
+	  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+	<title> </title>
+</head>
+<body>
+	<h1> Tennis</h1>
+	<p> Its the best cause why not? </p>
+
+</body>
+</html>
